--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,6 +6,7 @@
   font-family: "Mulish", sans-serif;
   text-decoration: none;
   list-style: none;
+box-sizing: border-box;
 }
 
 :root {
@@ -27,6 +28,11 @@ i{
 color: #fff;
 }
 
+.logo img{
+width:50px;
+height:50px;
+}
+
 header {
   position: fixed;
   width: 100%;
@@ -42,19 +48,6 @@ header {
 }
 main {
   margin-top: 8rem;
-}
-.logo {
-  font-size: 1.1rem;
-  font-weight: 600;
-  color: var(--bg-color);
-  display: flex;
-  align-items: center;
-  column-gap: 0.5rem;
-}
-
-.logo .bx {
-  font-size: 24px;
-  color: var(--main-color);
 }
 
 .navbar {
